# streamlit-pdf-viewer

./: .bumpversion.toml  .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml  pyproject.toml_  pytest.ini  requirements.dev  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci-build.yml  ci-bump-version.yml  ci-release.yml
docs/: pdf-component-schemas.graffle
e2e/: test_template.py
my_component/: __init__.py
my_component/frontend/: package-lock.json  package.json
resources/: annotations.json  annotations.sample.json
streamlit_pdf_viewer/: __init__.py  example.py
streamlit_pdf_viewer/frontend/: .eslintrc.js  .gitignore  (+5 more)
tests/: __init__.py  conftest.py  e2e_utils.py  example.py  example_args.py  example_no_args.py  test_accessibility.py  test_alignment_center.py  test_alignment_left.py  test_alignment_right.py  test_browser_compatibility.py  test_edge_cases.py  test_embed_height.py  test_embed_no_args.py  test_embed_width.py  test_embed_width_height.py  test_error_handling.py  test_iframe_height.py  test_iframe_no_args.py  test_iframe_width.py  test_iframe_width_height.py  test_integration_scenarios.py  test_interactive_features.py  test_invalid_params.py  test_multiple_instances.py  test_page_separator_disabled.py  test_page_separator_enabled.py  test_performance.py  test_rendering_text.py  test_resolution_boost.py  test_responsive_design.py  test_security_validation.py  test_stress_scenarios.py  test_tabs.py  test_tabs_2.py  test_tabs_setHeight.py  test_tabs_setWidth.py  test_template.py  test_template_args.py  test_template_embed.py  (+10 more)
(+32 files in other folders)
