[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.bumpversion]
current_version = "0.0.1"
commit = "true"
tag = "true"
tag_name = "v{new_version}"

[project]
name = ""
license = { file = "LICENSE" }
authors = [
    { name = "Luca Foppiano", email = "lucanoro@duck.com" },
    { name = "Tomoya Mato", email = "tomoya.matou@gmail.com" }
]
maintainers = [
    { name = "Luca Foppiano", email = "lucanoro@duck.com" },
    { name = "Tomoya Mato", email = "tomoya.matou@gmail.com" }
]
description = "Streamlit component for PDF visualisation and manipulation"
readme = "README.md"

dynamic = ['version']

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/lfoppiano/streamlit-pdf-viewer"
Repository = "https://github.com/lfoppiano/streamlit-pdf-viewer"
Changelog = "https://github.com/lfoppiano/streamlit-pdf-viewer/blob/main/CHANGELOG.md"